Lần đầu đưa lên GitHub

--- a/datcauhoi.html
+++ b/datcauhoi.html
@@ -86,7 +86,7 @@
 	  <div data-layer="Item" class="Item" style="width: 1053px; height: 588px; left: 261px; top: 149px; position: absolute; background: white; border-radius: 16px; outline: 2px #E8EEF7 solid; outline-offset: -2px">
 		<div data-layer="Container" class="Container" style="width: 1033px; height: 153.56px; left: 10px; top: 10px; position: absolute"></div>
 		<div data-layer="Form → Button" class="FormButton" style="width: 284px; height: 65px; left: 572px; top: 494px; position: absolute; background: #142133; box-shadow: 0px 0px 0px 1px #0056D2 inset; overflow: hidden; border-radius: 4px">
-		  <div data-layer="Đăng" class="Ng" style="left: 128px; top: 20px; position: absolute; text-align: center; color: white; font-size: 16px; font-family: Source Sans Pro; font-weight: 600; line-height: 24px; letter-spacing: 0.16px; word-wrap: break-word">Đăng</div>
+		  <a href="#"><div data-layer="Đăng" class="Ng" style="left: 128px; top: 20px; position: absolute; text-align: center; color: white; font-size: 16px; font-family: Source Sans Pro; font-weight: 600; line-height: 24px; letter-spacing: 0.16px; word-wrap: break-word">Đăng</div></a>
 		</div>
 		<div data-layer="Form → Button" class="FormButton" style="width: 284px; height: 65px; left: 277px; top: 494px; position: absolute; background: #BFCEE4; box-shadow: 0px 0px 0px 1px #0056D2 inset; overflow: hidden; border-radius: 4px">
 		  <div data-layer="Hủy" class="HY" style="left: 132px; top: 20px; position: absolute; text-align: center; color: white; font-size: 16px; font-family: Source Sans Pro; font-weight: 600; line-height: 24px; letter-spacing: 0.16px; word-wrap: break-word">Hủy</div>
@@ -119,9 +119,10 @@
 			  <div data-layer="Input - E-mail" class="InputEMail" style="width: 830px; height: 46px; left: 0px; top: -3px; position: absolute; overflow: hidden">
 				<div data-layer="Container" class="Container" style="width: 798px; height: 20px; left: 16px; top: 12px; position: absolute"></div>
 			  </div>
-			  <div data-layer="Fieldset" class="Fieldset" style="width: 830px; height: 45px; left: 0px; top: -5px; position: absolute; overflow: hidden; border-radius: 4px">
-				<div data-layer="Fieldset:styles" class="FieldsetStyles" style="width: 830px; height: 39px; left: 0px; top: 6px; position: absolute; border-radius: 4px; border: 1px #8495B0 solid"></div>
-			  </div>
+			 <input 
+  type="text" 
+  style="width: 830px; height: 39px; border: 1px solid #8495B0; border-radius: 4px; padding: 8px;" />
+
 			</div>
 		  </div>
 		</div>
@@ -129,9 +130,10 @@
 		  <div data-layer="Input - E-mail" class="InputEMail" style="width: 830px; height: 46px; left: 0px; top: 127px; position: absolute; overflow: hidden">
 			<div data-layer="Container" class="Container" style="width: 798px; height: 20px; left: 16px; top: 12px; position: absolute"></div>
 		  </div>
-		  <div data-layer="Fieldset" class="Fieldset" style="width: 830px; height: 304px; left: 0px; top: -5px; position: absolute; overflow: hidden; border-radius: 4px">
-			<div data-layer="Fieldset:styles" class="FieldsetStyles" style="width: 830px; height: 298px; left: 0px; top: 6px; position: absolute; border-radius: 4px; border: 1px #8495B0 solid"></div>
-		  </div>
+		  <textarea 
+  style="width: 830px; height: 304px; border: 1px solid #8495B0; border-radius: 4px; padding: 8px; resize: none;"
+></textarea>
+
 		</div>
 	  </div>
 	</div>
@@ -155,7 +157,7 @@
 			<div data-layer="Các Chứng chỉ Chuyên môn" class="CCChNgChChuyNMN" style="width: 160.93px; height: 18px; left: 0px; top: 0px; position: absolute; color: #0F1114; font-size: 14px; font-family: Source Sans Pro; font-weight: 400; line-height: 20px; word-wrap: break-word">Các Chứng chỉ Chuyên môn</div>
 		  </div>
 		  <div data-layer="Listitem → Link" class="ListitemLink" style="width: 139.25px; height: 18px; left: 0px; top: 169px; position: absolute">
-			<div data-layer="Chứng chỉ MasterTrack®" class="ChNgChMastertrack" style="width: 139.56px; height: 18px; left: 0px; top: 0px; position: absolute; color: #0F1114; font-size: 14px; font-family: Source Sans Pro; font-weight: 400; line-height: 20px; word-wrap: break-word">Chứng chỉ MasterTrack®</div>
+			<div data-layer="Chứng chỉ MasterTrack®" class="ChNgChMastertrack" style="width: 149.56px; height: 18px; left: 0px; top: 0px; position: absolute; color: #0F1114; font-size: 14px; font-family: Source Sans Pro; font-weight: 400; line-height: 20px; word-wrap: break-word">Chứng chỉ MasterTrack®</div>
 		  </div>
 		  <div data-layer="Listitem → Link" class="ListitemLink" style="width: 48.81px; height: 18px; left: 0px; top: 193px; position: absolute">
 			<div data-layer="Trình độ" class="TrNh" style="width: 49.16px; height: 18px; left: 0px; top: 0px; position: absolute; color: #0F1114; font-size: 14px; font-family: Source Sans Pro; font-weight: 400; line-height: 20px; word-wrap: break-word">Trình độ</div>
