--- a/logingmail.html
+++ b/logingmail.html
@@ -48,9 +48,9 @@
       </p>
      </div>
     </button>
-    <button class="flex items-center gap-4 px-6 py-4 hover:bg-gray-100 focus:bg-gray-100 focus:outline-none" type="button">
-     <div aria-hidden="true" class="w-10 h-10 rounded-full bg-[#ea4335] flex items-center justify-center text-white font-semibold text-lg">
-      A
+    <a href="dalogin.html"><button class="flex items-center gap-4 px-6 py-4 hover:bg-gray-100 focus:bg-gray-100 focus:outline-none" type="button">
+     <div aria-hidden="true" class="w-10 h-10 rounded-full bg-[#1e3a8a] flex items-center justify-center text-white font-semibold text-lg">
+      D
      </div>
      <div class="text-left">
       <p class="text-gray-900 text-base font-normal">
@@ -60,7 +60,7 @@
        me@chou.design
       </p>
      </div>
-    </button>
+    </button></a>
     <button class="flex items-center gap-4 px-6 py-4 hover:bg-gray-100 focus:bg-gray-100 focus:outline-none rounded-b-lg" type="button">
      <i class="fas fa-user-circle text-gray-900 text-xl">
      </i>
