--- a/thanhtoanok.html
+++ b/thanhtoanok.html
@@ -40,7 +40,7 @@
 				</div>
 			  </div>
 			  <div data-layer="Form → Button" class="FormButton" style="width: 283.86px; height: 64px; left: 370px; top: 183px; position: absolute; background: #0056D2; box-shadow: 0px 0px 0px 1px #0056D2 inset; overflow: hidden; border-radius: 4px">
-				<div data-layer="Bắt đầu khóa học" class="BTUKhAHC" style="width: 124.25px; height: 20px; left: 70px; top: 18px; position: absolute; text-align: center; color: white; font-size: 16px; font-family: Source Sans Pro; font-weight: 600; line-height: 24px; letter-spacing: 0.16px; word-wrap: break-word">Bắt đầu khóa học</div>
+				<a href="khoahocDATA.html"><div data-layer="Bắt đầu khóa học" class="BTUKhAHC" style="width: 124.25px; height: 20px; left: 70px; top: 18px; position: absolute; text-align: center; color: white; font-size: 16px; font-family: Source Sans Pro; font-weight: 600; line-height: 24px; letter-spacing: 0.16px; word-wrap: break-word">Bắt đầu khóa học</div></a>
 			  </div>
 			</div>
 			<div data-layer="Paragraph" class="Paragraph" style="width: 438.75px; height: 49px; left: 802px; top: 24px; position: absolute"></div>
@@ -140,7 +140,7 @@
 			<div data-layer="Coursera" class="Coursera" style="width: 119.72px; height: 17px; left: 0px; top: 24px; position: absolute"></div>
 			<div data-layer="© 2025 SoftTech Inc. Tất cả các quyền được bảo lưu." class="2025SofttechIncTTCCCQuyNCBOLU" style="width: 293.75px; height: 18px; left: 686.56px; top: 24px; position: absolute; color: #0F1114; font-size: 12px; font-family: Open Sans; font-weight: 400; line-height: 18px; word-wrap: break-word">© 2025 SoftTech Inc. Tất cả các quyền được bảo lưu.</div>
 		  </div>
-		  <div data-layer="soft tech" class="SoftTech" style="width: 112px; height: 48px; left: 351px; top: 20.09px; position: absolute; text-align: center; color: black; font-size: 40px; font-family: Source Sans Pro; font-weight: 700; text-transform: uppercase; line-height: 20px; word-wrap: break-word">soft<br/>tech</div>
+		  <div data-layer="soft tech" class="SoftTech" style="width: 142px; height: 38px; left: 351px; top: 20.09px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Source Sans Pro; font-weight: 600; text-transform: uppercase; word-wrap: break-word">soft<br/>tech</div>
 		</div>
 	  </div>
 	</div>
@@ -177,7 +177,7 @@
 		  </div>
 		</div>
 	  </div>
-	  <div data-layer="soft tech" class="SoftTech" style="width: 112px; height: 48px; left: 169px; top: 16px; position: absolute; text-align: center; color: black; font-size: 40px; font-family: Source Sans Pro; font-weight: 700; text-transform: uppercase; line-height: 20px; word-wrap: break-word">soft<br/>tech</div>
+	  <div data-layer="soft tech" class="SoftTech" style="width: 152px; height: 38px; left: 169px; top: 0px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Source Sans Pro; font-weight: 600; text-transform: uppercase; word-wrap: break-word">soft<br/>tech</div>
 	</div>
   </div>
 </body>
