--- a/qccode.html
+++ b/qccode.html
@@ -9,7 +9,7 @@
 	<div data-layer="Background" class="Background" style="width: 1905px; height: 1210.91px; left: 0px; top: 0px; position: absolute; background: white">
 	  <div data-layer="Main" class="Main" style="width: 1905px; height: 1145.91px; left: 0px; top: 65px; position: absolute">
 		<div data-layer="Background" class="Background" style="width: 1111.25px; height: 1058.91px; left: 0px; top: 23px; position: absolute; background: white">
-		  <div data-layer="Heading 1 → Thanh toán" class="Heading1ThanhToN" style="width: 145.70px; height: 36px; left: 193px; top: 16px; position: absolute; color: #0F1114; font-size: 30px; font-family: Source Sans Pro; font-weight: 600; line-height: 36px; word-wrap: break-word">Thanh toán</div>
+		  <div data-layer="Heading 1 → Thanh toán" class="Heading1ThanhToN" style="width: 155.70px; height: 36px; left: 193px; top: 16px; position: absolute; color: #0F1114; font-size: 30px; font-family: Source Sans Pro; font-weight: 600; line-height: 36px; word-wrap: break-word">Thanh toán</div>
 		  <div data-layer="Tất cả các trường là bắt buộc" class="TTCCCTrNgLBTBuC" style="width: 174.29px; height: 20px; left: 193px; top: 52px; position: absolute; color: #0F1114; font-size: 14px; font-family: Source Sans Pro; font-weight: 400; line-height: 20px; word-wrap: break-word">Tất cả các trường là bắt buộc</div>
 		  <div data-layer="Form" class="Form" style="width: 664.75px; height: 625.91px; left: 258px; top: -49px; position: absolute">
 			<div data-layer="Container" class="Container" style="width: 988px; height: 559px; left: -335px; top: 136px; position: absolute; overflow: hidden">
@@ -107,7 +107,7 @@
 		  <div data-layer="Container" class="Container" style="width: 980px; height: 86px; left: 462.50px; top: 1px; position: absolute">
 			<div data-layer="© 2025 SoftTech Inc. Tất cả các quyền được bảo lưu." class="2025SofttechIncTTCCCQuyNCBOLU" style="width: 293.75px; height: 18px; left: 686.56px; top: 24px; position: absolute; color: #0F1114; font-size: 12px; font-family: Open Sans; font-weight: 400; line-height: 18px; word-wrap: break-word">© 2025 SoftTech Inc. Tất cả các quyền được bảo lưu.</div>
 		  </div>
-		  <div data-layer="soft tech" class="SoftTech" style="width: 112px; height: 48px; left: 253px; top: 19.09px; position: absolute; text-align: center; color: black; font-size: 40px; font-family: Source Sans Pro; font-weight: 700; text-transform: uppercase; line-height: 20px; word-wrap: break-word">soft<br/>tech</div>
+		  <div data-layer="soft tech" class="SoftTech" style="width: 152px; height: 38px; left: 253px; top: 19.09px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Source Sans Pro; font-weight: 600; text-transform: uppercase; word-wrap: break-word">soft<br/>tech</div>
 		</div>
 		<div data-layer="Background" class="Background" style="width: 793.75px; height: 1058.91px; left: 1111.25px; top: 0px; position: absolute; background: #F0F6FF">
 		  <div data-layer="Heading 2 → Tóm tắt" class="Heading2TMTT" style="left: 79.38px; top: 48px; position: absolute; color: #0F1114; font-size: 30px; font-family: Source Sans Pro; font-weight: 600; line-height: 36px; word-wrap: break-word">Tóm tắt khóa học</div>
@@ -170,7 +170,7 @@
 			  </div>
 			</div>
 		  </div>
-		  <div data-layer="soft tech" class="SoftTech" style="width: 112px; height: 48px; left: -8.50px; top: 8px; position: absolute; text-align: center; color: black; font-size: 40px; font-family: Source Sans Pro; font-weight: 700; text-transform: uppercase; line-height: 20px; word-wrap: break-word">soft<br/>tech</div>
+		  <div data-layer="soft tech" class="SoftTech" style="width: 152px; height: 38px; left: 0px; top: 0px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Source Sans Pro; font-weight: 600; text-transform: uppercase; word-wrap: break-word">soft<br/>tech</div>
 		</div>
 	  </div>
 	</div>
