--- a/danhgiakhoahoc.html
+++ b/danhgiakhoahoc.html
@@ -197,7 +197,7 @@
 			  <div data-layer="Blog" class="Blog" style="width: 29.81px; height: 18px; left: 0px; top: 0px; position: absolute; color: #0F1114; font-size: 14px; font-family: Source Sans Pro; font-weight: 400; line-height: 20px; word-wrap: break-word">Blog</div>
 			</div>
 			<div data-layer="Listitem → Link" class="ListitemLink" style="width: 101.77px; height: 18px; left: 0px; top: 97px; position: absolute">
-			  <div data-layer="Podcast Soft" class="PodcastSoft" style="width: 102.13px; height: 18px; left: 0px; top: 0px; position: absolute; color: #0F1114; font-size: 14px; font-family: Source Sans Pro; font-weight: 400; line-height: 20px; word-wrap: break-word">Podcast Soft</div>
+			  <div data-layer="Podcast Soft" class="PodcastSoft" style="width: 102.13px; height: 18px; left: 0px; top: 0px; position: absolute; color: #0F1114; font-size: 14px; font-family: Source Sans Pro; font-weight: 400; line-height: 20px; word-wrap: break-word">Podcast SoftTech</div>
 			</div>
 			<div data-layer="Listitem → Link" class="ListitemLink" style="width: 90.56px; height: 18px; left: 0px; top: 121px; position: absolute">
 			  <div data-layer="Blog công nghệ" class="BlogCNgNgh" style="width: 90.90px; height: 18px; left: 0px; top: 0px; position: absolute; color: #0F1114; font-size: 14px; font-family: Source Sans Pro; font-weight: 400; line-height: 20px; word-wrap: break-word">Blog công nghệ</div>
@@ -395,7 +395,7 @@
 				</div>
 			  </div>
 			</div>
-			<div data-layer="soft tech" class="SoftTech" style="width: 142px; height: 38px; left: -8.50px; top: 0px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Source Sans Pro; font-weight: 600; text-transform: uppercase; word-wrap: break-word">soft<br/>tech</div>
+			<a href="chitietkhoahoc.html"><div data-layer="soft tech" class="SoftTech" style="width: 142px; height: 38px; left: -8.50px; top: 0px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Source Sans Pro; font-weight: 600; text-transform: uppercase; word-wrap: break-word">soft<br/>tech</div></a>
 		  </div>
 		</div>
 	  </div>
