--- a/chitietkhoahoc.html
+++ b/chitietkhoahoc.html
@@ -218,7 +218,7 @@
 		<div data-layer="Border" class="Border" style="width: 1344px; height: 182px; left: 280.50px; top: 1327.11px; position: absolute; border-radius: 8px; outline: 1px #E8EEF7 solid; outline-offset: -1px">
 		  <div data-layer="Container" class="Container" style="width: 852px; height: 116px; left: 33px; top: 33px; position: absolute">
 			<div data-layer="Link" class="Link" style="width: 269.48px; height: 20px; left: 0px; top: 94px; position: absolute">
-			  <div data-layer="Tìm hiểu thêm về Coursera for Business" class="TMHiUThMVCourseraForBusiness" style="width: 269.78px; height: 20px; left: 0px; top: 0px; position: absolute; color: #0056D2; font-size: 16px; font-family: Source Sans Pro; font-weight: 600; line-height: 20px; word-wrap: break-word">Tìm hiểu thêm về Coursera for Business</div>
+			  <div data-layer="Tìm hiểu thêm về Coursera for Business" class="TMHiUThMVCourseraForBusiness" style="width: 269.78px; height: 20px; left: 0px; top: 0px; position: absolute; color: #0056D2; font-size: 16px; font-family: Source Sans Pro; font-weight: 600; line-height: 20px; word-wrap: break-word">Tìm hiểu thêm về SoftTech for Business</div>
 			</div>
 			<div data-layer="Heading 1" class="Heading1" style="width: 650px; height: 80px; left: 0px; top: 0px; position: absolute">
 			  <div data-layer="Xem nhân viên tại các công ty hàng đầu đang nắm vững các kỹ năng thiết yếu như thế nào" class="XemNhNViNTICCCNgTyHNgUAngNMVNgCCKNNgThiTYUNhThNO" style="width: 575.73px; height: 72px; left: 0px; top: 0px; position: absolute; color: #0F1114; font-size: 28px; font-family: Source Sans Pro; font-weight: 600; line-height: 36px; word-wrap: break-word">Xem nhân viên tại các công ty hàng đầu đang nắm vững các kỹ năng thiết yếu như thế nào</div>
