--- a/giaodienkhoahoc.html
+++ b/giaodienkhoahoc.html
@@ -1524,7 +1524,7 @@
 			  <div data-layer="Danh mục" class="DanhMC" style="width: 59.91px; height: 18px; left: 0px; top: 0px; position: absolute; color: #0F1114; font-size: 14px; font-family: Source Sans Pro; font-weight: 400; line-height: 20px; word-wrap: break-word">Danh mục</div>
 			</div>
 			<div data-layer="Listitem → Link" class="ListitemLink" style="width: 88.86px; height: 18px; left: 0px; top: 121px; position: absolute">
-			  <div data-layer="Coursera Thêm" class="CourseraThM" style="width: 89.20px; height: 18px; left: 0px; top: 0px; position: absolute; color: #0F1114; font-size: 14px; font-family: Source Sans Pro; font-weight: 400; line-height: 20px; word-wrap: break-word">Coursera Thêm</div>
+			  <div data-layer="Coursera Thêm" class="CourseraThM" style="width: 89.20px; height: 18px; left: 0px; top: 0px; position: absolute; color: #0F1114; font-size: 14px; font-family: Source Sans Pro; font-weight: 400; line-height: 20px; word-wrap: break-word">SoftTech Thêm</div>
 			</div>
 			<div data-layer="Listitem → Link" class="ListitemLink" style="width: 160.61px; height: 18px; left: 0px; top: 145px; position: absolute">
 			  <div data-layer="Các Chứng chỉ Chuyên môn" class="CCChNgChChuyNMN" style="width: 160.93px; height: 18px; left: 0px; top: 0px; position: absolute; color: #0F1114; font-size: 14px; font-family: Source Sans Pro; font-weight: 400; line-height: 20px; word-wrap: break-word">Các Chứng chỉ Chuyên môn</div>
@@ -1568,7 +1568,7 @@
 			  <div data-layer="Blog" class="Blog" style="width: 29.81px; height: 18px; left: 0px; top: 0px; position: absolute; color: #0F1114; font-size: 14px; font-family: Source Sans Pro; font-weight: 400; line-height: 20px; word-wrap: break-word">Blog</div>
 			</div>
 			<div data-layer="Listitem → Link" class="ListitemLink" style="width: 101.77px; height: 18px; left: 0px; top: 97px; position: absolute">
-			  <div data-layer="Podcast Coursera" class="PodcastCoursera" style="width: 102.13px; height: 18px; left: 0px; top: 0px; position: absolute; color: #0F1114; font-size: 14px; font-family: Source Sans Pro; font-weight: 400; line-height: 20px; word-wrap: break-word">Podcast Coursera</div>
+			  <div data-layer="Podcast Coursera" class="PodcastCoursera" style="width: 102.13px; height: 18px; left: 0px; top: 0px; position: absolute; color: #0F1114; font-size: 14px; font-family: Source Sans Pro; font-weight: 400; line-height: 20px; word-wrap: break-word">Podcast SoftTech</div>
 			</div>
 			<div data-layer="Listitem → Link" class="ListitemLink" style="width: 90.56px; height: 18px; left: 0px; top: 121px; position: absolute">
 			  <div data-layer="Blog công nghệ" class="BlogCNgNgh" style="width: 90.90px; height: 18px; left: 0px; top: 0px; position: absolute; color: #0F1114; font-size: 14px; font-family: Source Sans Pro; font-weight: 400; line-height: 20px; word-wrap: break-word">Blog công nghệ</div>
