--- a/giohang.html
+++ b/giohang.html
@@ -131,7 +131,7 @@
 				  </div>
 				  <div data-layer="Section - Bộ sưu tập Get Started with These Free Courses" class="SectionBSUTPGetStartedWithTheseFreeCourses" style="width: 1188px; height: 479.69px; left: 0px; top: 285.56px; position: absolute">
 					<div data-layer="Heading 2" class="Heading2" style="width: 1188px; height: 36px; left: 0px; top: 32px; position: absolute">
-					  <div data-layer="Get Started with These Free Courses" class="GetStartedWithTheseFreeCourses" style="width: 477.51px; height: 38px; left: 0px; top: -1px; position: absolute; color: #0F1114; font-size: 30px; font-family: Source Sans Pro; font-weight: 600; line-height: 36px; word-wrap: break-word">Get Started with These Free Courses</div>
+					  <div data-layer="Get Started with These Free Courses" class="GetStartedWithTheseFreeCourses" style="width: 477.51px; height: 38px; left: 0px; top: -1px; position: absolute; color: #0F1114; font-size: 30px; font-family: Source Sans Pro; font-weight: 600; line-height: 36px; word-wrap: break-word">Get Started with These Free SoftTech</div>
 					</div>
 					<div data-layer="List" class="List" style="width: 1212px; height: 343.69px; left: -12px; top: 68px; position: absolute">
 					  <div data-layer="Item" class="Item" style="width: 303px; height: 343.69px; left: 0px; top: 0px; position: absolute">
