--- a/index.html
+++ b/index.html
@@ -1617,7 +1617,7 @@
 			  <div data-layer="Bài kiểm tra năng khiếu nghề nghiệp" class="BIKiMTraNNgKhiUNghNghiP" style="width: 216.98px; height: 18.33px; left: 0px; top: 0px; position: absolute; color: #1F1F1F; font-size: 14px; font-family: Source Sans Pro; font-weight: 400; line-height: 20px; word-wrap: break-word">Bài kiểm tra năng khiếu nghề nghiệp</div>
 			</div>
 			<div data-layer="Listitem → Link" class="ListitemLink" style="width: 267.30px; height: 18.33px; left: 0px; top: 270.83px; position: absolute">
-			  <div data-layer="Chia sẻ Câu chuyện học tập Coursera của bạn" class="ChiaSCUChuyNHCTPCourseraCABN" style="width: 267.60px; height: 18.33px; left: 0px; top: 0px; position: absolute; color: #1F1F1F; font-size: 14px; font-family: Source Sans Pro; font-weight: 400; line-height: 20px; word-wrap: break-word">Chia sẻ Câu chuyện học tập Coursera của bạn</div>
+			  <div data-layer="Chia sẻ Câu chuyện học tập Coursera của bạn" class="ChiaSCUChuyNHCTPCourseraCABN" style="width: 267.60px; height: 18.33px; left: 0px; top: 0px; position: absolute; color: #1F1F1F; font-size: 14px; font-family: Source Sans Pro; font-weight: 400; line-height: 20px; word-wrap: break-word">Chia sẻ Câu chuyện học tập SoftTech của bạn</div>
 			</div>
 		  </div>
 		</div>
@@ -1640,7 +1640,7 @@
 			  <div data-layer="Danh mục" class="DanhMC" style="width: 59.90px; height: 18.33px; left: 0px; top: 0px; position: absolute; color: #1F1F1F; font-size: 14px; font-family: Source Sans Pro; font-weight: 400; line-height: 20px; word-wrap: break-word">Danh mục</div>
 			</div>
 			<div data-layer="Listitem → Link" class="ListitemLink" style="width: 88.87px; height: 18.33px; left: 0px; top: 150.83px; position: absolute">
-			  <div data-layer="Coursera Thêm" class="CourseraThM" style="width: 89.21px; height: 18.33px; left: 0px; top: 0px; position: absolute; color: #1F1F1F; font-size: 14px; font-family: Source Sans Pro; font-weight: 400; line-height: 20px; word-wrap: break-word">Coursera Thêm</div>
+			  <div data-layer="Coursera Thêm" class="CourseraThM" style="width: 89.21px; height: 18.33px; left: 0px; top: 0px; position: absolute; color: #1F1F1F; font-size: 14px; font-family: Source Sans Pro; font-weight: 400; line-height: 20px; word-wrap: break-word">SoftTech Thêm</div>
 			</div>
 			<div data-layer="Listitem → Link" class="ListitemLink" style="width: 160.61px; height: 18.33px; left: 0px; top: 180.83px; position: absolute">
 			  <div data-layer="Các Chứng chỉ Chuyên môn" class="CCChNgChChuyNMN" style="width: 160.93px; height: 18.33px; left: 0px; top: 0px; position: absolute; color: #1F1F1F; font-size: 14px; font-family: Source Sans Pro; font-weight: 400; line-height: 20px; word-wrap: break-word">Các Chứng chỉ Chuyên môn</div>
